# dls-comedor-industrial

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
config/: README.md
config/environments/: development.env.example  production.env.example
docs/: architecture.md
docs/decisions/: ADR-001-stack-tecnologico.md  README.md
docs/project-control/: README.md  W1-KPIS-PILOTO.md  W1-MATRIZ-PROCESOS.md  W1-MVP-ALCANCE.md  W2-CONFIG-BASE.md  W2-DATOS-ARRANQUE.md  W2-QA-UAT.md  W3-BASELINE-TECNICA.md  W3-CASOS-USO.md  W3-REGLAS-NEGOCIO.md
docs/runbooks/: README.md
scripts/: deploy.sh  setup.sh
services/db/migrations/: README.md
services/db/schema/: init.sql
services/odoo/: requirements.txt
services/odoo/addons/comedor/: __manifest__.py
services/odoo/addons/comedor/models/: __init__.py  menu.py  racion.py
services/odoo/addons/comedor/security/: ir.model.access.csv
services/odoo/addons/comedor/views/: menu_items.xml  menu_views.xml  racion_views.xml
services/odoo/config/: odoo.conf
tests/: __init__.py
tests/fixtures/: conftest.py
tests/integration/: __init__.py  test_database.py
tests/unit/: __init__.py  test_constants.py
