# pyproject.toml — Configuración central de Python para dls-comedor-industrial
# Stack: Python 3.11+, Odoo 18, PostgreSQL
# Herramientas: Ruff (linter + formatter), mypy (tipado), pytest, bandit (seguridad)

[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

# ── Metadatos del proyecto ─────────────────────────────────────────
[project]
name        = "dls-comedor-industrial"
version     = "0.1.0"
description = "ERP Comedor Industrial — módulos Odoo 18 personalizados y servicios auxiliares"
readme      = "README.md"
license     = { file = "LICENSE" }
authors     = [{ name = "dleonsystem", email = "dev@dleonsystem.com" }]
keywords    = ["odoo", "erp", "comedor", "industrial", "postgresql"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.11"

# Dependencias de runtime
dependencies = [
    "psycopg2-binary>=2.9",
    "python-dotenv>=1.0",
    "requests>=2.31",
    "pydantic>=2.5",
]

[project.optional-dependencies]
dev = [
    # Linting / formatting
    "ruff>=0.4",
    # Tipado estático
    "mypy>=1.10",
    "types-requests",
    "types-psycopg2",
    # Pruebas
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "factory-boy>=3.3",
    # Seguridad
    "bandit[toml]>=1.7",
    "detect-secrets>=1.4",
    # Pre-commit
    "pre-commit>=3.7",
]

[project.urls]
Homepage   = "https://github.com/dleonsystem/dls-comedor-industrial"
Repository = "https://github.com/dleonsystem/dls-comedor-industrial.git"
Issues     = "https://github.com/dleonsystem/dls-comedor-industrial/issues"
Changelog  = "https://github.com/dleonsystem/dls-comedor-industrial/blob/main/CHANGELOG.md"

# ── Ruff — Linter + Formatter ─────────────────────────────────────
[tool.ruff]
target-version = "py311"
line-length    = 88
src            = ["services", "packages", "tests", "scripts"]
exclude        = [
    ".git", ".venv", "__pycache__", "build", "dist",
    "services/odoo/filestore", "infra/gcp/.terraform",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "S",   # flake8-bandit (seguridad básica)
    "ANN", # flake8-annotations (type hints)
    "N",   # pep8-naming
]
ignore = [
    "ANN101", # missing type annotation for self
    "ANN102", # missing type annotation for cls
    "S101",   # assert en tests está permitido
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S", "ANN"]
"scripts/**/*.py" = ["ANN"]

[tool.ruff.lint.isort]
known-first-party = ["comedor", "shared"]

[tool.ruff.format]
quote-style               = "double"
indent-style              = "space"
skip-magic-trailing-comma = false

# ── mypy — Tipado estático ────────────────────────────────────────
[tool.mypy]
python_version         = "3.11"
strict                 = true
ignore_missing_imports = true
exclude                = ["services/odoo/filestore", "infra/gcp"]

# ── pytest ────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths        = ["tests"]
python_files     = ["test_*.py", "*_test.py"]
python_classes   = ["Test*"]
python_functions = ["test_*"]
addopts          = "-v --tb=short --cov=services --cov-report=term-missing --cov-report=xml"

[tool.coverage.run]
source  = ["services", "packages"]
omit    = ["*/tests/*", "*/migrations/*", "*/__pycache__/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true

# ── bandit — Análisis de seguridad ───────────────────────────────
[tool.bandit]
targets    = ["services", "packages", "scripts"]
exclude    = ["tests", "services/odoo/filestore"]
skips      = ["B101"]   # assert permitido en tests
